--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -98,7 +99,8 @@
         android:hint="Phone"
         android:layout_below="@+id/editText_name"
         android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:visibility="gone" />
 
     <android.support.v7.widget.AppCompatSpinner
         android:layout_width="wrap_content"
@@ -137,6 +139,7 @@
 
     <com.wang.avi.AVLoadingIndicatorView
         android:layout_width="wrap_content"
+        android:visibility="invisible"
         android:id="@+id/loader_accuracy"
         android:layout_height="wrap_content"
         app:indicatorName="BallClipRotatePulseIndicator"
